--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "devDependencies": {
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.7"
+  },
+  "dependencies": {
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1"
   }
 }
